--- a/static/css/FeelzApp.css
+++ b/static/css/FeelzApp.css
@@ -2,7 +2,13 @@
 
  add the following:
 
- all styling for the app, mainly buttons 
+ all styling for the app 
   not needed for assignment 4
 
  */
+
+
+ /* button classes */
+
+
+ /* post classes */
