add css empty classes

--- a/static/css/FeelzApp.css
+++ b/static/css/FeelzApp.css
@@ -9,6 +9,37 @@
 
 
  /* button classes */
+.backButton {
 
+}
+
+.postButton {
+
+}
+
+.newPostButton {
+
+}
 
  /* post classes */
+ .post {
+
+ }
+
+ .snippet p {
+
+ }
+
+ .postFormat p {
+
+ }
+
+ /* images */
+
+ img .thumbnail {
+
+ }
+
+
+
+ 
