--- a/static/css/FeelzApp.css
+++ b/static/css/FeelzApp.css
@@ -18,8 +18,8 @@ body {
 }
 
 .navbar-header {
-  margin-left:5px;
-  width:99%;
+	margin-left:5px;
+	width:99%;
 }
 
  /* post classes */
@@ -40,6 +40,11 @@ body {
  img .thumbnail {
 
  }
+
+ /* text area for posting */
+textarea {
+	width: 99%;
+}
 
 
 
