--- a/static/css/FeelzApp.css
+++ b/static/css/FeelzApp.css
@@ -13,8 +13,10 @@
   * padding for space for fixed to top
   * fix margins for aligning right
   */
+
 body { 
 	padding-top: 70px; 
+	text-align: center;
 }
 
 .navbar-header {
@@ -41,10 +43,25 @@ body {
 
  }
 
- /* text area for posting */
+ /*  new post page */
 textarea {
+	padding-left: 1%;
 	width: 98%;
 }
 
+.newPostButton {
 
+}
 
+.popover {
+	max-width: 100%;
+	right:1% !important;    
+    left: 1% !important;
+    bottom: 1% !important;
+    margin-right:1%;
+}
+
+.popover .arrow {
+	right:0;
+    margin-right:2%;
+}
