--- a/static/css/FeelzApp.css
+++ b/static/css/FeelzApp.css
@@ -25,8 +25,34 @@ body {
 }
 
  /* post classes */
- .post {
+.postSnippet {
+ }
 
+.postFull {
+	opacity: 1.0;
+
+	margin-left: auto;
+	margin-right: auto;
+	width: 80%;
+	height: 30%;
+ }
+
+ #popup_container_panel {
+	padding-top: 70px; 
+	width: 100%;
+	height: 100%;
+	opacity: .95;
+	top: 0;
+	left: 0;
+	display: none;
+	position: fixed;
+	background-color: #B7B7B7;
+	overflow: auto;
+}
+
+ #popup_container_panel:after {
+ 	content: ' ';
+ 	opacity: 0.1;
  }
 
  /* images */
@@ -42,10 +68,10 @@ form {
 	border:2px solid gray;
 	border-radius:10px;
 	/*font-family:raleway;*/
-	background-color:#fff
+	background-color:#fff;
 }
 
-#popup_container {
+#popup_container_form {
 	padding-top: 70px; 
 	width: 100%;
 	height: 100%;
