--- a/views/partials/feelzNaviBar.handlebars
+++ b/views/partials/feelzNaviBar.handlebars
@@ -2,7 +2,7 @@
 
 <html>
 	<!-- fixed position navibar on top of screen -->
-	<nav class="navbar navbar-default navbar-fixed-top">
+	<nav class="navbar navbar-default navbar-fixed-top feelzNaviBar">
 		<div class="container">
 			<div class="navbar-header">
 				<!-- collapse formatting for mobile -->
@@ -34,16 +34,16 @@
 					  	</a>
 					  	<ul class="dropdown-menu" role="menu">
 					  		<li class="divider"></li>
-					    	<li><a href="accountSettings.html">Settings</a></li>
-					    	<li><a href="login_page.html">Logout</a></li>
+					    	<li><a href="Account_Settings">Settings</a></li>
+					    	<li><a href="Login">Logout</a></li>
 					    	<li class="divider"></li>
 					  	</ul>
 					</li>
 					<li>
-		                 <a href="about_page.html">About FeelzApp</a>
+		                 <a href="About">About FeelzApp</a>
 					</li>
 					<li>
-						<a href="help_page.html">Help</a>
+						<a href="Help">Help</a>
 					</li>
 				<ul>
 			</div>
