--- a/views/accSettings.handlebars
+++ b/views/accSettings.handlebars
@@ -13,7 +13,8 @@
 <body>
 
 	<!-- fixed position navibar on top of screen -->
-	<script src="js/feelzNaviBar.js"></script>
+	{{>feelzNaviBar}}
+
 	
 	<h1>Account Settings </h1>
 
@@ -26,7 +27,7 @@
 
 	<p>Facebook: </p>
 
-	<a href="index.html">Back to Homepage</a>
+	<a href="/">Back to Homepage</a>
 </body>
 
 
