--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -22,7 +22,7 @@
             <div class="panel panel-info" >
                 <div class="panel-heading">
                     <div class="panel-title">Sign In To FeelzApp</div>
-                    <div style="float:right; font-size: 80%; position: relative; top:-10px"><a href="forgotPassword_page.html">Forgot password?</a></div>
+                    <div style="float:right; font-size: 80%; position: relative; top:-10px"><a href="Forgot_Password">Forgot password?</a></div>
                 </div>     
 
                 <div style="padding-top:20px" class="panel-body" >
@@ -58,8 +58,8 @@
                             <div class="col-sm-12 controls">
                         
                                 <!-- href="#" -->
-                                <a id="btn-login" href="index.html" class="btn btn-success">Login  </a>
-                                <a id="btn-fblogin" href="index.html" class="btn btn-primary">Login with Facebook</a>
+                                <a id="btn-login" href="/" class="btn btn-success">Login  </a>
+                                <a id="btn-fblogin" href="/" class="btn btn-primary">Login with Facebook</a>
 
                             </div>
                         </div>
@@ -69,7 +69,7 @@
                             <div class="col-md-12 control">
                                 <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%" >
                                     Don't have an account? 
-                                    <a href="signup_page.html">
+                                    <a href="Signup">
                                         Sign up HERE!
                                     </a>
                                 </div>
