--- a/views/accSettings.handlebars
+++ b/views/accSettings.handlebars
@@ -37,7 +37,7 @@
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/feelzApp.js"></script>
+	<script src="js/hideNav.js"></script>
 
 
 </html>
