--- a/views/partials/feelzNaviBar.handlebars
+++ b/views/partials/feelzNaviBar.handlebars
@@ -13,38 +13,26 @@
 		    	    <span class="icon-bar"></span>
 				</button>
 				<!-- navibar title -->
-				<a class="navbar-brand" href="#"><b>Feelz</b></a>
+				<a class="navbar-brand" href="/"><b>Feelz</b></a>
+
+				<div class="navbar-right pull-right">
+					<!--- make newpost button on the navibar.  
+							It will change to "back" on form load. -->
+					<button id="postButtonToggle" type="button" class="btn btn-default navbar-btn">New Post</button>
+				</div>
 			</div>
 			<!-- everything in this div will collapse into a menu button on mobile -->
 			<div id="menuIcon" class="collapse navbar-collapse menuIcon" >
 				<!-- this list will be collapsed into one on mobile instead of side by side -->
 				<ul class="nav navbar-nav navbar-right"> 
-					<li>
-						<!--- make newpost button on the navibar.  
-										It will change to "back" on form load. -->
-						<!-- navbar-btn: formatted button for navbar -->
-						<a id="postButtonToggle">New Post</a>
-					</li>
 					<!-- devides new post and account settings in mobile -->
-				    <li class="divider"></li>
-					<li >
-						<!-- dropdown-toggle: dropdown of menu options for account -->
-					  	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-					    	Account <span class="caret"></span>
-					  	</a>
-					  	<ul class="dropdown-menu" role="menu">
-					  		<li class="divider"></li>
-					    	<li><a href="Account_Settings">Settings</a></li>
-					    	<li><a href="Login">Logout</a></li>
-					    	<li class="divider"></li>
-					  	</ul>
-					</li>
-					<li>
-		                 <a href="About">About FeelzApp</a>
-					</li>
-					<li>
-						<a href="Help">Help</a>
-					</li>
+					<li><a href="/">Home</a></li>
+				    <li class="menuSeparator"></li>
+					<li><a href="Account_Settings">Settings</a></li>
+					<li><a href="Login">Logout</a></li>
+					<li class="menuSeparator"></li>
+					<li><a href="About">About</a></li>
+					<li><a href="Help">Help</a></li>
 				<ul>
 			</div>
 		</div>
