--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -48,6 +48,8 @@
 	    <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-
+	<script src="js/hideNav.js"></script>
+	
 </html>
