--- a/views/partials/postFull.handlebars
+++ b/views/partials/postFull.handlebars
@@ -3,17 +3,20 @@
 <html>
 
 	<div id="popup_container_panel">
-		<div class="panel panel-default postFull">
-			<div class="panel-heading clearfix">
-    			<h3 class="panel-title pull-left">Post title</h3>
-    			<div class="btn-group pull-right">
-    				<a onclick="hidePopupPost()" class="btn btn-default btn-sm">bump</a>
-    				<a onclick="hidePopupPost()" class="btn btn-default btn-sm">close</a>
-    			</div>
-  		 	</div>
-		 	<div class="panel-body">
-		    	This is the full post text!
-		  	</div>
+		<div class="panel postFull">
+			<div id="fullPostCategory">
+				<div class="panel-heading clearfix">
+	    			<h3 id="fullPostTitle" class="panel-title pull-left">placeholder</h3>
+	    			<div class="btn-group pull-right">
+	    				<a onclick="hidePopupPost()" class="btn btn-default btn-sm">bump</a>
+	    				<a onclick="hidePopupPost()" class="btn btn-default btn-sm">close</a>
+	    			</div>
+	  		 	</div>
+			 	<div id="fullPostInfo" class="panel-body">
+			    	placeholder
+			  	</div>
+			</div>
+		</div>
 	</div>
 
 </html>
