--- a/views/partials/postSnippet.handlebars
+++ b/views/partials/postSnippet.handlebars
@@ -2,7 +2,7 @@
 
 <html>
 
-	<div class="panel {{postCategory}} postSnippet">
+	<div class="panel {{postCategory}} postSnippet" data-cat="{{postCategory}}" data-title="{{postTitle}}" data-info="{{postInfo}}" data-full="{{fullPost}}">
 	  <div class="panel-heading">
 		<h3 class="panel-title">{{postTitle}}</h3>
 		  </div>
