--- a/views/accSettings.handlebars
+++ b/views/accSettings.handlebars
@@ -8,6 +8,7 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="css/FeelzApp.css" rel="stylesheet">
+	<link href="css/accSettings.css" rel="stylesheet">
 
 
 <body>
@@ -15,29 +16,44 @@
 	<!-- fixed position navibar on top of screen -->
 	{{>feelzNaviBar}}
 
+	<div class="panel panel-info">
+
+		<div class="panel-heading">
+			<h1 class="panel-title">Account Settings</h1>
+		</div>
+
+		<div class="panel-body">
+			<p>Userame: {{username}}</p>
+			<p>Email: {{email}}</p>
+
+			<p>Test Password Changes: {{password}}</p>
+			<a id="changePasswordButton" name="changePasswordButton"type="button">Change password</a>
+			<!-- change password form -->
+			<form id="changePasswordForm" method="get" name="changePasswordForm" action="/changePassword">
+				Old Password: <input id="oldPassword" type="text" name="oldPassword" placeholder="old password"><br>
+				New Password: <input id="newPassword" type="text" name="newPassword" placeholder="new password"><br>
+				Confirm New Password: <input id="confirmNewPassword" type="text" name="confirmNewPassword" placeholder="new password"><br>
+				<input type="submit" id="submitChanges" class="btn btn-default" value="Update"></input>
+			</form>
+
+			<p>Facebook: </p>
+	 	 </div>
+
+	</div>
 	
-	<h1>Account Settings </h1>
-
-	<p>Name: </p>
-	<p>Email: </p>
-
-	<p>Password: </p>
-	
-	<p>Change Password: </p>
-
-	<p>Facebook: </p>
-
 	<a href="/">Back to Homepage</a>
+
+
 </body>
 
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/hideNav.js"></script>
+	<script src="js/changePassword.js"></script>
 
 
 </html>
