--- a/public/css/bootstrap-theme.css
+++ b/public/css/bootstrap-theme.css
@@ -358,6 +358,13 @@
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff428bca', endColorstr='#ff357ebd', GradientType=0);
 }
 
+.panel-custom > .panel-heading {
+  background-image: -webkit-linear-gradient(top, #EAD9F7 0%, #E7C4F3 100%);
+  background-image: linear-gradient(to bottom, #EAD9F7 0%, #E7C4F3 100%);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffd9edf7', endColorstr='#ffc4e3f3', GradientType=0);
+}
+
 .panel-success > .panel-heading {
   background-image: -webkit-linear-gradient(top, #dff0d8 0%, #d0e9c6 100%);
   background-image: linear-gradient(to bottom, #dff0d8 0%, #d0e9c6 100%);
