fix consistency of pages

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -13,26 +13,29 @@
 
 		<!-- fixed position navibar on top of screen -->
 		{{>feelzNaviBar}}
+		
+		<div class="panel panel-info">
 
-		<center>
-			<div class="page_title">
-				<h1><b><u>About FeelzApp.</u></b></h1>
-				</div>
-			<div class="container">
+			<div class="panel-heading">
+				<h1 class="panel-title">About FeelzApp</h1>
+			</div>
 
-			<p>FeelzApp is your new diary. You can post anonymously</br>
-			or reveal your identity. Have a strong feeling? Happy? Sad?</br>
-			Angry? Let it out on the FeelzApp. Did you read a post that</br>
-			gave you the Feelz? Bump it to the top of the feed so others</br>
-			can get their Feelz on too. We're all friends here, so be nice!</br>
-			Enjoy!</br>
-			</p>
-		</center>
+			<div class="panel-body">
+				<p>FeelzApp is your new diary. You can post anonymously</br>
+				or reveal your identity. Have a strong feeling? Happy? Sad?</br>
+				Angry? Let it out on the FeelzApp. Did you read a post that</br>
+				gave you the Feelz? Bump it to the top of the feed so others</br>
+				can get their Feelz on too. We're all friends here, so be nice!</br>
+				Enjoy!</br>
+				</p>
+		 	 </div>
+		 
+		 </div>
+
 
 		<div class="footer">
 			<footer>
-				
-					<a href="/">Back to Main Page</a>
+				<a href="/">Back to Homepage</a>
 			</footer>
 		</div>
 	</body>
