--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -14,32 +14,35 @@
 	<!-- fixed position navibar on top of screen -->
 	{{>feelzNaviBar}}
 
-		<center>
-			<h1><b><u>Help with the Feelz.</u></b></h1>
-			</br></br>
-			<div class="container">
-				<h3>User Log-In</h3>
-				<p>
-					How to create an account
-					How to log in to your account
-					How to log out of your account
-				</p>
-				<h3>How to post</h3>
-				<p>
-					Posting your Feelz
-				</p>
-				<h3>I really liked a post I saw, how do I express this?</h3>
-				<p>
-					Feeling a post
-				</p>
-				</br>
-			</div>
+	<div class="panel panel-info">
 
-		</center>
+		<div class="panel-heading">
+			<h1 class="panel-title">AHelp with the Feelz</h1>
+		</div>
+
+		<div class="panel-body">
+			<h3>User Log-In</h3>
+			<p>
+				How to create an account
+				How to log in to your account
+				How to log out of your account
+			</p>
+			<h3>How to post</h3>
+			<p>
+				Posting your Feelz
+			</p>
+			<h3>I really liked a post I saw, how do I express this?</h3>
+			<p>
+				Feeling a post
+			</p>
+			</br>
+	 	 </div>
+	 
+	 </div>
 
 	<div class="footer">
 		<footer>
-				<a href="/">Back to Main Page</a>
+			<a href="/">Back to Main Page</a>
 		</footer>
 	</div>
 
