--- a/views/accSettings.handlebars
+++ b/views/accSettings.handlebars
@@ -8,6 +8,7 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="css/FeelzApp.css" rel="stylesheet">
+	<link href="css/feelzNaviBar.css" rel="stylesheet">
 	<link href="css/accSettings.css" rel="stylesheet">
 
 
