css and content
linked pages to css file and added content

--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -7,6 +7,7 @@
 		<link href="css/bootstrap-theme.min.css" rel="stylesheet">
 		<link href="css/about_and_help.css" rel="stylesheet">
 		<link href="css/feelzNaviBar.css" rel="stylesheet">
+		<link href="css/FeelzApp.css" rel="stylesheet">
 
 	</head>
 	<body>
@@ -17,23 +18,25 @@
 	<div class="panel panel-info">
 
 		<div class="panel-heading">
-			<h1 class="panel-title">AHelp with the Feelz</h1>
+			<h1 class="panel-title">Help with the Feelz</h1>
 		</div>
 
 		<div class="panel-body">
-			<h3>User Log-In</h3>
+			<h3>User Log-In</h3></br>
 			<p>
-				How to create an account
-				How to log in to your account
-				How to log out of your account
+				<h4>Creating an Account</h4>
+				<p>Creating an account is super easy and fun here on the FeelzApp. Just click the "Sign up HERE!" button on the Sign In screen and you'll be on your way!</p>
+				<h4>How to Log In</h4>
+				<p>You can log in to you account by simply entering you user information into the Log In screen.</p>
+				<h4>How to Log Out</h4>
+				<p>You can log out of your account by clicking on the "Log Out" button from the drop-down menu.</p>
 			</p>
 			<h3>How to post</h3>
 			<p>
-				Posting your Feelz
-			</p>
+				You can post your Feelz by simply clicking on the "New Post" button on the top right corner of the main feed page and voila!</p>
 			<h3>I really liked a post I saw, how do I express this?</h3>
 			<p>
-				Feeling a post
+				Feeling a post? Awesome! Go ahead and tap/click on the post and select "bump" from the top right corner. This will move the post to the top of the feed and give it Feel points!
 			</p>
 			</br>
 	 	 </div>
