--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -7,6 +7,7 @@
 			<link href="css/bootstrap-theme.min.css" rel="stylesheet">
 			<link href="css/about_and_help.css" rel="stylesheet">
 			<link href="css/feelzNaviBar.css" rel="stylesheet">
+			<link href="css/FeelzApp.css" rel="stylesheet">
 	</head>
 
 	<body>
