added account button
fixed UI problem. no menu item that hints to logging in or signing up.
"log out" menu item was too vague/bad UI

--- a/views/partials/feelzNaviBar.handlebars
+++ b/views/partials/feelzNaviBar.handlebars
@@ -29,7 +29,8 @@
 					<li><a href="/">Home</a></li>
 				    <li class="menuSeparator"></li>
 					<li><a href="Account_Settings">Settings</a></li>
-					<li><a href="Login">Logout</a></li>
+					<li><a href="Login">Account</a></li>
+					<li><a href="Login">Log Out</a></li>
 					<li class="menuSeparator"></li>
 					<li><a href="About">About</a></li>
 					<li><a href="Help">Help</a></li>
