--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -25,11 +25,11 @@
 			<h3>User Log-In</h3></br>
 			<p>
 				<h4>Creating an Account</h4>
-				<p>Creating an account is super easy and fun here on the FeelzApp. Just click the "Sign up HERE!" button on the Sign In screen and you'll be on your way!</p>
+				<p>Creating an account is super easy and fun here on the FeelzApp. Just click on "Account" from the drop-down menu then click on "Sign Up HERE!" on the Login In screen and you'll be on your way!</p>
 				<h4>How to Log In</h4>
 				<p>You can log in to you account by simply entering you user information into the Log In screen.</p>
 				<h4>How to Log Out</h4>
-				<p>You can log out of your account by clicking on the "Log Out" button from the drop-down menu.</p>
+				<p>You can log out of your account by clicking on the "Log Out" from the drop-down menu.</p>
 			</p>
 			<h3>How to post</h3>
 			<p>
