fixed bugs & created possible main page
fixed some bugs w login and sign up pages
made a possible main page

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,7 +11,7 @@
             <div class="navbar-header">
            
                 <!-- navibar title -->
-                <a class="navbar-brand" href="login_page.html"><b>Feelz</b></a>
+                <a class="navbar-brand" href="/"><b>Feelz</b></a>
             </div>
         </div>
     </nav>
