--- a/views/partials/feelzNaviBar.handlebars
+++ b/views/partials/feelzNaviBar.handlebars
@@ -13,7 +13,7 @@
 		    	    <span class="icon-bar"></span>
 				</button>
 				<!-- navibar title -->
-				<a class="navbar-brand" href="/"><b>Feelz</b></a>
+				<a class="navbar-brand" href="/"><b>FeelzApp</b></a>
 
 				<div class="navbar-right pull-right">
 					<!--- make newpost button on the navibar.  
