--- a/public/css/FeelzApp.css
+++ b/public/css/FeelzApp.css
@@ -34,7 +34,12 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffd9edf7', endColorstr='#ffc4e3f3', GradientType=0);
  	border-color: #E7C4F3;
 }
-
+.panel-info{
+	margin-left:auto;
+	margin-right: auto;
+	width: 80%;
+	height: 30%;
+	}
 .panel-body {
     word-wrap:break-word;
 }
@@ -47,6 +52,7 @@ body {
 	width: 80%;
 	height: 30%;
  }
+ 
 
  #popup_container_panel {
 	padding-top: 70px; 
