--- a/views/accSettings.handlebars
+++ b/views/accSettings.handlebars
@@ -29,15 +29,18 @@
 
 			<p>Test Password Changes: {{password}}</p>
 			<a id="changePasswordButton" name="changePasswordButton"type="button">Change password</a>
+
+			<p>Facebook: </p>
+
+			<div class="passwordAlert alert alert-danger" role="alert">Alert!</div>
 			<!-- change password form -->
-			<form id="changePasswordForm" method="get" name="changePasswordForm" action="/changePassword">
+			<form id="changePasswordForm" method="get" name="changePasswordForm" action="/changePassword" onsubmit="return checkForm(this);">
 				Old Password: <input id="oldPassword" type="text" name="oldPassword" placeholder="old password"><br>
-				New Password: <input id="newPassword" type="text" name="newPassword" placeholder="new password"><br>
-				Confirm New Password: <input id="confirmNewPassword" type="text" name="confirmNewPassword" placeholder="new password"><br>
+				New Password: <input id="newPassword" type="password" name="pwd1" placeholder="new password"><br>
+				Confirm New Password: <input id="pwd2" type="password" name="confirmNewPassword" placeholder="new password"><br>
 				<input type="submit" id="submitChanges" class="btn btn-default" value="Update"></input>
 			</form>
 
-			<p>Facebook: </p>
 	 	 </div>
 
 	</div>
