add new post checks

--- a/views/partials/newPost.handlebars
+++ b/views/partials/newPost.handlebars
@@ -5,7 +5,7 @@
 	<div id="popup_container_form">
 		<div id="newpost_form">
 			<!-- action = "#" -->
-			<form class="newPostForm" id="form" method="get" name="newPostForm" action="/newPostRe">
+			<form class="newPostForm" id="form" method="get" name="newPostForm" action="/newPostRe" onsubmit="return checkNewPostForm(this);">
 				<!-- add post title -->
 				<input id="newPostTitle" name="newPostTitle" placeholder="Post Title" type="text"><br/>
 				<!-- add text box -->
@@ -16,12 +16,12 @@
 							<!-- Single button dropdown menu for choosing category -->
 							<select type="button" class="form-control" name="newPostCategory">
 								<option>Category</option>
-							    <option value="1">One</option>
-							    <option value="2">Two</option>
-							    <option value="3">Three</option>
-							    <option value="4">Four</option>
-							    <option value="5">Five</option>
-							    <option value="6">Six</option>
+							    <option value="1">Grey</option>
+							    <option value="2">Blue</option>
+							    <option value="3">Green</option>
+							    <option value="4">Purple</option>
+							    <option value="5">Yellow</option>
+							    <option value="6">Red Note: please rename these</option>
 							</select>
 					</div>
 
