add categories to posts

--- a/views/partials/postFull.handlebars
+++ b/views/partials/postFull.handlebars
@@ -7,9 +7,12 @@
 			<div id="fullPostCategory">
 				<div class="panel-heading clearfix">
 	    			<h3 id="fullPostTitle" class="panel-title pull-left">placeholder</h3>
-	    			<div class="btn-group pull-right">
+	    			<div class="pull-right">
 	    				<a onclick="hidePopupPost()" class="btn btn-default btn-sm">bump</a>
-	    				<a onclick="hidePopupPost()" class="btn btn-default btn-sm">close</a>
+	    				<a onclick="hidePopupPost()" >
+	    					<span class="glyphicon glyphicon-remove" aria-hidden="true" ></span>
+	    					<span class="sr-only">Close</span>
+	    				</a>
 	    			</div>
 	  		 	</div>
 			 	<div id="fullPostInfo" class="panel-body">
