--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,42 +5,68 @@
 		<title>FeelzApp</title>	
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="css/bootstrap.min.css" rel="stylesheet">
-		<link href="css/bootstrap-theme.min.css" rel="stylesheet">
-		<link href="css/FeelzApp.css" rel="stylesheet">
-		<link href="css/feelzNaviBar.css" rel="stylesheet">
+		<link href="/css/bootstrap.min.css" rel="stylesheet">
+		<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
+		<link href="/css/FeelzApp.css" rel="stylesheet">
+		<link href="/css/simple-sidebar.css" rel="stylesheet">
+		<link href="/css/feelzNaviBar.css" rel="stylesheet">
 	    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	    <!--[if lt IE 9]>
 	      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-	    <![endif]-->        
+	    <![endif]-->
 	</head>
 
 	<!-- body for the titlebar description and newPost popup -->
 	<body>
-		<!-- fixed position navibar on top of screen -->
-		{{>feelzNaviBar}}
+		<div id="wrapper">
+			<!-- fixed position navibar on top of screen -->
+			{{>feelzNaviBar}}
 
-		<!-- new post popup form -->
-		{{> newPost}}
+		    <div id="sidebar-wrapper">
+				<ul class="sidebar-nav">
+					<li class="sidebar-brand">Menu</li>
+					<li role="presentation" class="active"><a href="/">All</a></li>
+					<li role="presentation"><a href="/category/1">Grey</a></li>
+					<li role="presentation"><a href="/category/2">Blue</a></li>
+					<li role="presentation"><a href="/category/3">Green</a></li>
+					<li role="presentation"><a href="/category/4">Purple</a></li>
+					<li role="presentation"><a href="/category/5">Yellow</a></li>
+					<li role="presentation"><a href="/category/6">Red</a></li>
+				</ul>
+			</div>
+			<!-- end sidebar-wrapper-->
 
-		<!-- home page posts list-->
-		<div class="container">
-			{{#each posts}}
-				{{>postSnippet}}
-			{{/each}}
+			<div id="page-content-wrapper" class="col-md-10"> 
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-lg-12">
+							<!-- home page posts list-->
+							<div class="container">
+								{{#each posts}}
+									{{>postSnippet}}
+								{{/each}}
+							</div>
+							<!-- new post popup form -->
+							{{> newPost}}
+							<!-- post popup -->
+							{{>postFull}}
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- end page-content-wrapper -->
 		</div>
+		<!-- end wrapper-->
 
-		<!-- post popup -->
-		{{>postFull}}
 	</body>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/feelzApp.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/feelzApp.js"></script>
 
 </html>
