change to menu, button size too big

--- a/views/partials/feelzNaviBar.handlebars
+++ b/views/partials/feelzNaviBar.handlebars
@@ -16,7 +16,7 @@
 				<a class="navbar-brand" href="/"><b>FeelzApp</b></a>
 
 				<div class="navbar-right pull-right">
-					<a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+					<a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Menu</a>
 					<!--- make newpost button on the navibar.  
 							It will change to "back" on form load. -->
 					<button id="postButtonToggle" type="button" class="btn btn-default navbar-btn">New Post</button>
