--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -3,49 +3,66 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			<link href="css/bootstrap.min.css" rel="stylesheet">
-			<link href="css/bootstrap-theme.min.css" rel="stylesheet">
-			<link href="css/about_and_help.css" rel="stylesheet">
-			<link href="css/feelzNaviBar.css" rel="stylesheet">
+			<link href="/css/bootstrap.min.css" rel="stylesheet">
+			<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
+			<link href="/css/about_and_help.css" rel="stylesheet">
+			<link href="/css/simple-sidebar.css" rel="stylesheet">
+			<link href="/css/feelzNaviBar.css" rel="stylesheet">
 			<link href="css/FeelzApp.css" rel="stylesheet">
 	</head>
 
 	<body>
 
-		<!-- fixed position navibar on top of screen -->
-		{{>feelzNaviBar}}
-		
-		<div class="panel panel-info">
+		<div id="wrapper">
+			<!-- fixed position navibar on top of screen -->
+			{{>feelzNaviBar}}
 
-			<div class="panel-heading">
-				<h1 class="panel-title">About FeelzApp</h1>
+			{{> sideBar}}
+
+			<div id="page-content-wrapper" class="col-md-10"> 
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-lg-12">
+							<!-- page content here -->
+							<div class="panel panel-info">
+
+								<div class="panel-heading">
+									<h1 class="panel-title">About FeelzApp</h1>
+								</div>
+
+								<div class="panel-body">
+									<p>FeelzApp is your new diary. You can post anonymously</br>
+									or reveal your identity. Have a strong feeling? Happy? Sad?</br>
+									Angry? Let it out on the FeelzApp. Did you read a post that</br>
+									gave you the Feelz? Bump it to the top of the feed so others</br>
+									can get their Feelz on too. We're all friends here, so be nice!</br>
+									Enjoy!</br>
+									</p>
+							 	 </div>
+							 
+							 </div>
+
+							<div class="footer">
+								<footer>
+									<a href="/">Back to Homepage</a>
+								</footer>
+							</div>
+
+						</div>
+					</div>
+				</div>
 			</div>
-
-			<div class="panel-body">
-				<p>FeelzApp is your new diary. You can post anonymously</br>
-				or reveal your identity. Have a strong feeling? Happy? Sad?</br>
-				Angry? Let it out on the FeelzApp. Did you read a post that</br>
-				gave you the Feelz? Bump it to the top of the feed so others</br>
-				can get their Feelz on too. We're all friends here, so be nice!</br>
-				Enjoy!</br>
-				</p>
-		 	 </div>
-		 
-		 </div>
-
-
-		<div class="footer">
-			<footer>
-				<a href="/">Back to Homepage</a>
-			</footer>
+			<!-- end page-content-wrapper -->
 		</div>
+		<!-- end wrapper-->
+
 	</body>
 
 	<!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/hideNav.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/hideNav.js"></script>
 
 </html>
