--- a/views/partials/feelzNaviBar.handlebars
+++ b/views/partials/feelzNaviBar.handlebars
@@ -6,7 +6,7 @@
 		<div class="container">
 			<div class="navbar-header">
 				<!-- collapse formatting for mobile -->
-		  		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menuIcon" aria-expanded="false" aria-controls="navbar">
+		  		<button id="menu-toggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" aria-expanded="false" aria-controls="navbar">
 		   		 	<span class="sr-only">Menu</span>
 					<span class="icon-bar"></span>
 		        	<span class="icon-bar"></span>
@@ -16,27 +16,12 @@
 				<a class="navbar-brand" href="/"><b>FeelzApp</b></a>
 
 				<div class="navbar-right pull-right">
-					<a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Menu</a>
 					<!--- make newpost button on the navibar.  
 							It will change to "back" on form load. -->
 					<button id="postButtonToggle" type="button" class="btn btn-default navbar-btn">New Post</button>
 				</div>
 			</div>
-			<!-- everything in this div will collapse into a menu button on mobile -->
-			<div id="menuIcon" class="collapse navbar-collapse menuIcon" >
-				<!-- this list will be collapsed into one on mobile instead of side by side -->
-				<ul class="nav navbar-nav navbar-right"> 
-					<!-- devides new post and account settings in mobile -->
-					<li><a href="/">Home</a></li>
-				    <li class="menuSeparator"></li>
-					<li><a href="Account_Settings">Settings</a></li>
-					<li><a href="Login">Account</a></li>
-					<li><a href="Login">Log Out</a></li>
-					<li class="menuSeparator"></li>
-					<li><a href="About">About</a></li>
-					<li><a href="Help">Help</a></li>
-				<ul>
-			</div>
+
 		</div>
 	</nav>
 </html>
