--- a/views/template_with_sidebar.handlebars
+++ b/views/template_with_sidebar.handlebars
@@ -30,16 +30,7 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-lg-12">
-							<!-- home page posts list-->
-							<div class="container">
-								{{#each posts}}
-									{{>postSnippet}}
-								{{/each}}
-							</div>
-							<!-- new post popup form -->
-							{{> newPost}}
-							<!-- post popup -->
-							{{>postFull}}
+							<!-- page content here -->
 						</div>
 					</div>
 				</div>
@@ -47,7 +38,6 @@
 			<!-- end page-content-wrapper -->
 		</div>
 		<!-- end wrapper-->
-
 	</body>
 
     <!-- Bootstrap core JavaScript
