--- a/views/partials/postFull.handlebars
+++ b/views/partials/postFull.handlebars
@@ -3,7 +3,7 @@
 <html>
 
 	<div id="popup_container_panel">
-		<div class="panel postFull">
+		<div id="postFull" class="panel postFull">
 			<div id="fullPostCategory">
 				<div class="panel-heading clearfix">
 	    			<h3 id="fullPostTitle" class="panel-title pull-left">placeholder</h3>
