--- a/views/partials/postFull.handlebars
+++ b/views/partials/postFull.handlebars
@@ -2,6 +2,14 @@
 
 <html>
 
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-lg-12">
+			<!-- page content here -->
+		</div>
+	</div>
+</div>
+				
 	<div id="popup_container_panel">
 		<div id="postFull" class="panel postFull">
 			<div id="fullPostCategory">
