fix menu collapsing

--- a/public/css/simple-sidebar.css
+++ b/public/css/simple-sidebar.css
@@ -96,6 +96,7 @@
     background: none;
 }
 
+/*
 @media(min-width:768px) {
     #wrapper {
         padding-left: 250px;
@@ -123,3 +124,4 @@
         margin-right: 0;
     }
 }
+*/
