--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -29,7 +29,7 @@
 
                     <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
                             
-                    <form id="loginform" class="form-horizontal" role="form">
+                    <form id="loginform" class="form-horizontal" role="form" action="/loginFormSubmit">
                                     
                         <div style="margin-bottom: 15px" class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
@@ -58,7 +58,7 @@
                             <div class="col-sm-12 controls">
                         
                                 <!-- href="#" -->
-                                <a id="btn-login" href="/" class="btn btn-success">Login  </a>
+                                <input type="submit" id="btn-login" class="btn btn-success" value="Login"></input>
                                 <a id="btn-fblogin" href="/" class="btn btn-primary">Login with Facebook</a>
 
                             </div>
@@ -84,6 +84,8 @@
 </body>
 
 
+<script src="https://code.jquery.com/jquery.js"></script>
+    
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
