--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -21,7 +21,8 @@
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-4 well well-sm">
             <legend><a href="http://www.jquery2dotnet.com"><i class="glyphicon glyphicon-globe"></i></a> Sign up!</legend>
-            <form action="#" method="post" class="form" role="form">
+            <!-- method="post"  -->
+            <form action="/SignupFormSubmit" class="form" role="form">
             <div class="row">
                 <div class="col-xs-6 col-md-6">
                     <input class="form-control" name="firstname" placeholder="First Name" type="text"
@@ -55,8 +56,7 @@
             </div>
             <br />
 
-            <button href="index.html" class="btn btn-lg btn-primary btn-block" type="submit">
-                Sign up</button>
+            <input type="submit" id="btn-signup" class="btn btn-lg btn-primary btn-block" value="Sign up"></input>
             </form>
         </div>
     </div>
