--- a/views/partials/feelzNaviBar.handlebars
+++ b/views/partials/feelzNaviBar.handlebars
@@ -6,7 +6,8 @@
 		<div class="container">
 			<div class="navbar-header">
 				<!-- collapse formatting for mobile -->
-		  		<button id="menu-toggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" aria-expanded="false" aria-controls="navbar">
+				<!-- remove pull-left when siebar gets formatted properly -->
+		  		<button id="menu-toggle" type="button" class="pull-left navbar-toggle collapsed" data-toggle="collapse" aria-expanded="false" aria-controls="navbar">
 		   		 	<span class="sr-only">Menu</span>
 					<span class="icon-bar"></span>
 		        	<span class="icon-bar"></span>
