--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -36,7 +36,7 @@
 									<h3>User Log-In</h3></br>
 									<p>
 										<h4>Creating an Account</h4>
-										<p>Creating an account is super easy and fun here on the FeelzApp. Just click on "Account" from the drop-down menu then click on "Sign Up HERE!" on the Login In screen and you'll be on your way!</p>
+										<p>Creating an account is super easy and fun here on the FeelzApp. Just click on the "Sign Up HERE!" button on the Login In screen and you'll be on your way!</p>
 										<h4>How to Log In</h4>
 										<p>You can log in to you account by simply entering you user information into the Log In screen.</p>
 										<h4>How to Log Out</h4>
