--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -32,6 +32,10 @@
 						<div class="col-lg-12">
 							<!-- home page posts list-->
 							<div class="container">
+								<div class="alert alert-info alert-dismissible" role="alert">
+								  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+								  <strong>Information:</strong> New to Feelz? Click Help on the sidebar menu
+								</div>
 								{{#each posts}}
 									{{>postSnippet}}
 								{{/each}}
