--- a/views/partials/feelzNaviBar.handlebars
+++ b/views/partials/feelzNaviBar.handlebars
@@ -17,6 +17,7 @@
 				<a class="navbar-brand" href="/"><b>FeelzApp</b></a>
 
 				<div class="navbar-right pull-right">
+					<a>Signed in As...</a>
 					<!--- make newpost button on the navibar.  
 							It will change to "back" on form load. -->
 					<button id="postButtonToggle" type="button" class="btn btn-default navbar-btn">New Post</button>
