--- a/views/partials/postFull.handlebars
+++ b/views/partials/postFull.handlebars
@@ -16,7 +16,8 @@
 				<div class="panel-heading clearfix">
 	    			<h3 id="fullPostTitle" class="panel-title pull-left">placeholder</h3>
 	    			<div class="pull-right">
-	    				<a onclick="hidePopupPost()" class="btn btn-default btn-sm">bump</a>
+	    				<a id="fullPostBumpCount">placeholder</a>
+	    				<a id="bumpButton" onclick="hidePopupPost()" class="btn btn-default btn-sm">bump</a>
 	    				<a onclick="hidePopupPost()" >
 	    					<span class="glyphicon glyphicon-remove" aria-hidden="true" ></span>
 	    					<span class="sr-only">Close</span>
