--- a/views/partials/postSnippet.handlebars
+++ b/views/partials/postSnippet.handlebars
@@ -2,9 +2,14 @@
 
 <html>
 
-	<div class="panel {{postCategory}} postSnippet" data-cat="{{postCategory}}" data-title="{{postTitle}}" data-info="{{postInfo}}" data-full="{{fullPost}}">
+	<div class="panel {{postCategory}} postSnippet" data-cat="{{postCategory}}" data-title="{{postTitle}}" data-info="{{postInfo}}" data-full="{{fullPost}}" data-bump="{{bumpCount}}">
 	  <div class="panel-heading">
-		<h3 class="panel-title">{{postTitle}}</h3>
+		<h3 class="panel-title">
+			{{postTitle}}
+			<div class="pull-right">
+				{{bumpCount}} 
+			</div>
+		</h3>
 		  </div>
 	  <div class="panel-body">
 	    {{postInfo}}
