add bumping features

--- a/views/partials/postFull.handlebars
+++ b/views/partials/postFull.handlebars
@@ -14,10 +14,10 @@
 		<div id="postFull" class="panel postFull">
 			<div id="fullPostCategory">
 				<div class="panel-heading clearfix">
-	    			<h3 id="fullPostTitle" class="panel-title pull-left">placeholder</h3>
+	    			<h3 id="fullPostTitle" class="panel-title pull-left">0</h3>
 	    			<div class="pull-right">
-	    				<a id="fullPostBumpCount">placeholder</a>
-	    				<a id="bumpButton" onclick="hidePopupPost()" class="btn btn-default btn-sm">bump</a>
+	    				<strong id="fullPostBumpCount">placeholder</strong>
+	    				<id="bumpButton" class="btn btn-default btn-sm">bump</a>
 	    				<a onclick="hidePopupPost()" >
 	    					<span class="glyphicon glyphicon-remove" aria-hidden="true" ></span>
 	    					<span class="sr-only">Close</span>
