add logout, fix small post bug

--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -76,5 +76,7 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/hideNav.js"></script>
+	<script src="js/logout.js"></script>
+
 	
 </html>
