--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -63,5 +63,6 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/feelzApp.js"></script>
+	<script src="/js/logout.js"></script>
 
 </html>
