--- a/views/partials/sideBar.handlebars
+++ b/views/partials/sideBar.handlebars
@@ -21,7 +21,7 @@
 			<li role="presentation"><a href="/About">About</a></li>
 			<li role="presentation"><a href="/Help">Help</a></li>
 			<li role="presentation"><a href="/Account_Settings">Account Settings</a></li>
-			<li role="presentation"><a href="/Login">Log Out</a> <br/> <br/> </li>
+			<li role="presentation"><a id="logoutButton" href="/Login">Log Out</a> <br/> <br/> </li>
 		</ul>
 	</div>
 	<!-- end sidebar-wrapper-->
