--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -64,5 +64,6 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/hideNav.js"></script>
+	<script src="js/logout.js"></script>
 
 </html>
