--- a/views/accSettings.handlebars
+++ b/views/accSettings.handlebars
@@ -63,8 +63,9 @@
     <!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
-		<!--<script src="/js/changePassword.js"></script> -->
+	<script src="/js/changePassword.js"></script>
 	<script src="/js/hideNav.js"></script>
+	<script src="js/logout.js"></script>
 
 
 </html>
