--- a/views/partials/postFull.handlebars
+++ b/views/partials/postFull.handlebars
@@ -17,7 +17,7 @@
 	    			<h3 id="fullPostTitle" class="panel-title pull-left">0</h3>
 	    			<div class="pull-right">
 	    				<strong id="fullPostBumpCount">placeholder</strong>
-	    				<id="bumpButton" class="btn btn-default btn-sm">bump</a>
+	    				<a id="bumpButton" class="btn btn-default btn-sm">bump</a>
 	    				<a onclick="hidePopupPost()" >
 	    					<span class="glyphicon glyphicon-remove" aria-hidden="true" ></span>
 	    					<span class="sr-only">Close</span>
