--- a/public/css/about_and_help.css
+++ b/public/css/about_and_help.css
@@ -14,3 +14,43 @@ body {
 .footer{
 	text-align: center;
 	}
+/*Accordion*/
+.accordion, .accordion *{
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing:border-box;
+	box-sizing:border-box;
+	}
+.accordion{
+	text-align: left;
+	overflow:hidden;
+	box-shadow:0px 1px 3px rgba(0,0,0,0.25);
+	border-radius:3px;
+	}
+/*Accordion Section Titles*/
+
+.accordion-section-title{
+	width: 100%;
+	padding:15px;
+	display:inline-block;
+	border-bottom: 1px solid;
+	transition: all linear 0.15s;
+	/* Type */
+	font-size:1.200em;
+	text-shadow:0px 1px 0px;
+	}
+
+.accordion-section-title.active, .accordion-section-title.hover{
+	background:#BDBDBD;
+	text-decoration:none;
+	}
+
+.accordion-selection:last-child .accordion-section-title{
+	border-bottom:none;
+	}
+
+/*Selection Content*/
+
+.accordion-section-content{
+	padding:15px;
+	display:none;
+	}
