--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -33,23 +33,40 @@
 								</div>
 
 								<div class="panel-body">
-									<h3>User Log-In</h3></br>
-									<p>
-										<h4>Creating an Account</h4>
-										<p>Creating an account is super easy and fun here on the FeelzApp. Just click on the "Sign Up HERE!" button on the Log In screen and you'll be on your way!</p>
-										<h4>How to Log In</h4>
-										<p>You can log in to you account by simply entering you user information into the Log In screen.</p>
-										<h4>How to Log Out</h4>
-										<p>You can log out of your account by clicking on the "Log Out" from the drop-down menu.</p>
-									</p>
-									<h3>How to post</h3>
-									<p>
-										You can post your Feelz by simply clicking on the "New Post" button on the top right corner of the main feed page and voila!</p>
-									<h3>I really liked a post I saw, how do I express this?</h3>
-									<p>
-										Feeling a post? Awesome! Go ahead and tap/click on the post and select "bump" from the top right corner. This will move the post to the top of the feed and give it Feel points!
-									</p>
-									</br>
+									<div class="accordion">
+										<div class="accordion-section">
+											<a class="accordion-section-title" href="#accordion-1">Creating an Account</a>
+											
+											<div id="accordion-1" class="accordion-section-content">
+												<p>Creating an account is super easy and fun here on the FeelzApp. Just click on the "Sign Up HERE!" button on the Log In screen and you'll be on your way!</p>
+											</div>
+										</div>
+										<div class="accordion-section">
+											<a class="accordion-section-title" href="#accordion-2">User Log-In</a>
+											
+											<div id="accordion-2" class="accordion-section-content">
+												<h6><b>How to Log In</b></h6>
+												<p>You can log in to you account by simply entering you user information into the Log In screen.</p>
+												<h6><b>How to Log Out</b></h6>
+												<p>You can log out of your account by clicking on the "Log Out" from the drop-down menu.</p>
+											</div>
+										</div>
+										<div class="accordion-section">
+											<a class="accordion-section-title" href="#accordion-3">How to Post</a>
+											
+											<div id="accordion-3" class="accordion-section-content">
+												<p>You can post your Feelz by simply clicking on the "New Post" button on the top right corner of the main feed page and voila!</p>
+											</div>
+										</div>
+										<div class="accordion-section">
+											<a class="accordion-section-title" href="#accordion-4">Bumping Posts</a>
+											
+											<div id="accordion-4" class="accordion-section-content">
+												<h6><b>I really liked a post I saw, how do I express this?</b></h6>
+												<p>Feeling a post? Awesome! Go ahead and tap/click on the post and select "bump" from the top right corner. This will move the post to the top of the feed and give it Feel points!</p>
+											</div>
+										</div>
+									</div>
 							 	 </div>
 							 
 							 </div>
@@ -73,10 +90,12 @@
 	    <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/hideNav.js"></script>
 	<script src="js/logout.js"></script>
+	<script src="js/help_accordion.js"></script>
+	
 
 	
 </html>
